[package]
edition      = "2024"
name         = "esp32-micro-rc-car"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32-micro-rc-car"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

defmt                  = "1.0"
esp-bootloader-esp-idf = { version = "0.4", features = ["defmt", "esp32s3"] }

embassy-net = { version = "0.7", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7", features = ["defmt"] }
embedded-io-async = { version = "0.7", features = ["defmt"] }
esp-alloc = { version = "0.9", features = ["defmt"] }
esp-backtrace = { version = "0.18", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6"
embassy-executor = { version = "0.9", features = ["defmt"] }
embassy-futures = "0.1"
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5", features = ["gatt", "central", "scan"] }

critical-section = "1.2"
static_cell      = "2.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
